--- a/simple-storage.cabal
+++ b/simple-storage.cabal
@@ -19,7 +19,8 @@ executable simple-storage
                         persistent, persistent-mongoDB,
                         template-haskell, persistent-template,
                         containers, random, mtl, text,
+                        monad-control,
                         base >= 4.6 && < 5
-  ghc-options:          -Wall
+  ghc-options:          -Wall -fno-warn-unused-do-bind
   default-extensions:   OverloadedStrings
   default-language:     Haskell2010
